<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text="@string/result"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/medium_grey"
            android:onClick="onDigit"
            android:text="@string/seven"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/medium_grey"
            android:onClick="onDigit"
            android:text="@string/eight"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/medium_grey"
            android:onClick="onDigit"
            android:text="@string/nine"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/medium_grey"
            android:onClick="onDigit"
            android:text="@string/divider"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>